# DicomProject

./: .env  .env.example  .gitignore  README.md  all_files.txt  docker-compose.anonymization.yml  docker-compose.main.yml  docker-compose.yml
back-anonymization/: .dockerignore  .gitignore  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
dicom-back/: .dockerignore  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
dicom-front/: .env.example  .gitignore  eslint.config.mjs  mock-data.ts  next.config.ts  package-lock.json  package.json
dicom-front/.claude/: launch.json
dicom-front/app/: HeroCta.tsx  NavUser.tsx  PromoCarousel.tsx  Providers.tsx  globals.css  home.css  layout.tsx  nav-user.tsx  page.tsx
dicom-front/app/api/: ApiFetch.ts  apiDicom.ts  apiFetch.ts  authApi.ts  dicomApi.ts
dicom-front/app/context/: ConfirmContext.tsx  ToastContext.tsx  UploadContext.tsx
dicom-front/app/lib/: cornerstoneInit.ts
dicom-front/app/login/: LoginForm.tsx  page.tsx
dicom-front/app/mypage/: BackButton.tsx  ChangePw.tsx  Withdraw.tsx  page.tsx
dicom-front/app/research/: page.tsx
dicom-front/services/: auth.ts  dateInputValue.ts
dicom-front/types/: cornerstone.d.ts
dicom-name-realizer/: .gitignore  README.md  pyproject.toml
dicom-name-realizer/src/dicom_name_realizer/: __init__.py  cli.py  dicom_io.py  names.py
dicom-name-realizer/tests/: test_dicom_io.py  test_names.py
samples/: CR_breast_001.dcm  CR_breast_002.dcm  CT_brain_001.dcm  CT_brain_002.dcm  CT_brain_003.dcm  CT_brain_004.dcm  CT_brain_implicit.dcm  README.txt
(+147 files in other folders)
