[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-name-realizer"
version = "0.1.0"
description = "Replace anonymized DICOM PatientName values with realistic synthetic names."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=3,<4",
]

[project.scripts]
dicom-name-realizer = "dicom_name_realizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
